--- a/video-work.html
+++ b/video-work.html
@@ -85,6 +85,7 @@
                             <br>
                             <span>TRACK: The Delfonics Theme (How Could You) by The Delfonics</span>
                         </p>
+                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
                     </div>
                 </div>
                 <div class="projects">
