--- a/video-work.html
+++ b/video-work.html
@@ -72,7 +72,7 @@
             <div id="visualizers">
                 <div class="projects">
                     <div class="video-img">
-                        <video class="proj-img" controls poster="./assets/images/space-men.jpeg">
+                        <video class="proj-img" poster="./assets/images/space-men.jpeg">
                             <source src="/assets/videos/space-men-final.mp4" type="video/mp4">
                         </video>
                     </div>
