--- a/video-work.html
+++ b/video-work.html
@@ -73,7 +73,7 @@
                 <div class="projects">
                     <div class="video-img">
                         <video class="proj-img" poster="./assets/images/space-men.jpeg">
-                            <source src="/assets/videos/space-men-final.mp4" type="video/mp4">
+                            <!-- <source src="" type="video/mp4"> -->
                         </video>
                     </div>
                     <div class="title-container">
