--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
         </div>
    </div> -->
    <div id="nav-section">
-        <a class="name-container" href="index.html">
-            <h1 class="name font-color">Wilfredo Herrera</h1>
+        <a class="name font-color" href="index.html">Wilfredo Herrera
         </a>
         <div class="dashed-line"></div>
-        <h2 class="subheadings font-color">Information</h2>
-        <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
+        <div id="about-me">
+            <h2 class="subheadings font-color">Information</h2>
+            <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
+        </div>
         <div class="dashed-line"></div>
         <div id="nav-menu">
             <h2 class="subheadings font-color">Nav</h2>
             <div class="full-menu">
                 <ul class="content-menu">
-                    <div class="nav-link">
+                     <div class="nav-link">
                         <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
                         <li class="link"><a class="link font-color" href="/video-work.html">Video work</a></li>
                     </div>
@@ -62,7 +63,7 @@
         </div>
         <div id="content">
             <div class="landing">
-                <img class="landing-img" src="./assets/images/project-gifs/video-game-web2.gif" alt="">
+                <img class="landing-img" src="./assets/images/project-gifs/video-game.gif" alt="">
             </div>
         </div>  
     </div>
