--- a/mixes.html
+++ b/mixes.html
@@ -18,12 +18,13 @@
         </div>
    </div> -->
    <div id="nav-section">
-        <a class="name-container" href="index.html">
-            <h1 class="name font-color">Wilfredo Herrera</h1>
+        <a class="name font-color" href="index.html">Wilfredo Herrera
         </a>
         <div class="dashed-line"></div>
-        <h2 class="subheadings font-color">Information</h2>
-        <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
+        <div id="about-me">
+            <h2 class="subheadings font-color">Information</h2>
+            <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
+        </div>
         <div class="dashed-line"></div>
         <div id="nav-menu">
             <h2 class="subheadings font-color">Nav</h2>
@@ -35,7 +36,7 @@
                     </div>
                     <div class="nav-link">
                         <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                        <li class="link font-color"><a class="link font-color active" href="mixes.html">Space traveler mixes</a></li>
+                        <li class="link font-color"><a class="link font-color" href="mixes.html">Space traveler mixes</a></li>
                     </div>
                     <div class="nav-link">
                         <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
