--- a/images.html
+++ b/images.html
@@ -17,12 +17,13 @@
         </div>
    </div> -->
    <div id="nav-section">
-        <a class="name-container" href="index.html">
-            <h1 class="name font-color">Wilfredo Herrera</h1>
+        <a class="name font-color" href="index.html">Wilfredo Herrera
         </a>
         <div class="dashed-line"></div>
-        <h2 class="subheadings font-color">Information</h2>
-        <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
+        <div id="about-me">
+            <h2 class="subheadings font-color">Information</h2>
+            <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
+        </div>
         <div class="dashed-line"></div>
         <div id="nav-menu">
             <h2 class="subheadings font-color">Nav</h2>
@@ -38,22 +39,22 @@
                     </div>
                     <div class="nav-link">
                         <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                        <li class="link font-color"><a class="link font-color active" href="/images.html">Images</a></li>
+                        <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
                     </div>
-                 </ul>
+                </ul>
                 <ul class="social-menu">
                     <div class="nav-link">
                         <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                        <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/">Instagram</a></li>
+                        <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
                     </div>
                     <div class="nav-link">
                         <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                        <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA">YouTube</a></li>
+                        <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
                     </div>
                 </ul>
             </div>
         </div>
-   </div>
+    </div>
    <div id="content-top">
         <div class="sticky-top">
             <h2 class="content-heading font-color">Images</h2>
