--- a/images.html
+++ b/images.html
@@ -16,42 +16,49 @@
             This is scrolling text.
         </div>
    </div> -->
+   <div id="nav-icon">
+    <div class="bar"></div>
+    <div class="bar"></div>
+    <div class="bar"></div>
+  </div>
    <div id="nav-section">
         <a class="name font-color" href="index.html">Wilfredo Herrera
         </a>
         <div class="dashed-line"></div>
-        <div id="about-me">
-            <h2 class="subheadings font-color">Information</h2>
-            <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
-        </div>
-        <div class="dashed-line"></div>
-        <div id="nav-menu">
-            <h2 class="subheadings font-color">Nav</h2>
-            <div class="full-menu">
-                <ul class="content-menu">
-                    <div class="nav-link">
-                        <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                        <li class="link"><a class="link font-color" href="/video-work.html">Video work</a></li>
-                    </div>
-                    <div class="nav-link">
-                        <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                        <li class="link font-color"><a class="link font-color" href="mixes.html">Space traveler mixes</a></li>
-                    </div>
-                    <div class="nav-link">
-                        <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                        <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
-                    </div>
-                </ul>
-                <ul class="social-menu">
-                    <div class="nav-link">
-                        <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                        <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
-                    </div>
-                    <div class="nav-link">
-                        <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                        <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
-                    </div>
-                </ul>
+        <div class="mobile-friendly">
+            <div id="about-me">
+                <h2 class="subheadings font-color">Information</h2>
+                <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
+            </div>
+            <div class="dashed-line"></div>
+            <div id="nav-menu">
+                <h2 class="subheadings font-color">Nav</h2>
+                <div class="full-menu">
+                    <ul class="content-menu">
+                        <div class="nav-link">
+                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <li class="link"><a class="link font-color" href="/video-work.html">Video work</a></li>
+                        </div>
+                        <div class="nav-link">
+                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <li class="link font-color"><a class="link font-color" href="mixes.html">Space traveler mixes</a></li>
+                        </div>
+                        <div class="nav-link">
+                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
+                        </div>
+                    </ul>
+                    <ul class="social-menu">
+                        <div class="nav-link">
+                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
+                        </div>
+                        <div class="nav-link">
+                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
+                        </div>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
