--- a/images.html
+++ b/images.html
@@ -68,7 +68,7 @@
             <div class="content-dashed-line"></div>
         </div>
         <div id="content">
-            <p class="desc font-color">Pictures taken on disposable camera then are scanned while shifting around creating warped and elongated shapes.  </p>
+            <p class="desc font-color">Disposable camera images are scanned while shifting and twisting around creating warped and elongated shapes.  </p>
             <img src="/assets/images/scanned-img/me-1.jpeg" alt="">
             <img src="./assets/images/scanned-img/flower-1.jpg" alt="distorted pink flowers">
             <img src="/assets/images/scanned-img/plant.jpeg" alt="">
