--- a/mixes.html
+++ b/mixes.html
@@ -70,8 +70,8 @@
         </div>
         <div id="content">
             <div id="mixes">
-                <h3 class="desc font-color">Pandemic creation, FREDONAUT, is a collection of ecclectic mixes for couch sitting conversations.</h3>
-                <h3 class="desc font-color">Listen to the catalog on<a class="font-color" href="https://www.mixcloud.com/fr_radio/" target=”_blank”>mixcloud</a></h3>
+                <p class="desc-mix font-color">Pandemic creation, FREDONAUT, is a collection of ecclectic mixes for couch sitting conversations.</p>
+                <p class="desc-mix font-color">Listen to the catalog on <a class="font-color" href="https://www.mixcloud.com/fr_radio/" target=”_blank”>mixcloud</a></p>
                 <div class="mix-pack">
                     <img class="mix-covers" src="./assets/images/fredonaut-covers/frdnaut-019.jpg" alt="">
                     <img class="mix-covers" src="./assets/images/fredonaut-covers/frdnaut-018.png" alt="">
