--- a/images.html
+++ b/images.html
@@ -62,7 +62,7 @@
             </div>
         </div>
     </div>
-   <div id="content-top">
+   <div id="image-content">
         <div class="sticky-top">
             <h2 class="content-heading font-color">Images</h2>
             <div class="content-dashed-line"></div>
