--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
     <div id="content-top">
         <div class="sticky-top">
-            <h2 class="content-heading font-color">Index</h2>
+            <h2 class="content-heading index font-color">Index</h2>
             <div class="content-dashed-line"></div>
         </div>
         <div id="content">
