--- a/freelance.html
+++ b/freelance.html
@@ -38,7 +38,7 @@
                     <ul class="content-menu">
                         <div class="nav-link">
                             <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                            <li class="link"><a class="link font-color" href="/video-work.html">Video work</a></li>
+                            <li class="link"><a class="link active font-color" href="/video-work.html">Video work</a></li>
                         </div>
                         <div class="nav-link">
                             <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
