--- a/images.html
+++ b/images.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="nav-link">
                             <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                            <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
+                            <li class="link font-color"><a class="link active font-color" href="/images.html">Images</a></li>
                         </div>
                     </ul>
                     <ul class="social-menu">
