--- a/mixes.html
+++ b/mixes.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="nav-link">
                             <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                            <li class="link font-color"><a class="link font-color" href="mixes.html">Space traveler mixes</a></li>
+                            <li class="link font-color"><a class="link active font-color" href="mixes.html">Space traveler mixes</a></li>
                         </div>
                         <div class="nav-link">
                             <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
