--- a/freelance.html
+++ b/freelance.html
@@ -23,45 +23,46 @@
     <div class="bar"></div>
   </div>
    <div id="nav-section">
-        <a class="name font-color" href="index.html">Wilfredo Herrera
-        </a>
+        <div class="logo-section">
+            <a class="name font-color" href="index.html">Wilfredo Herrera</a>
+            <a href="https://www.mixcloud.com/fr_radio/" target=”_blank”><img class="radio-icon" src="/assets/images/icons/radio-icon.png" alt=""></a>
+        </div>
         <div class="dashed-line"></div>
         <div class="mobile-friendly">
             <div id="about-me">
-                <h2 class="subheadings font-color">Information</h2>
-                <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
+                <p class="about font-color">Hola! Welcome to my archive of artistic expressions created using digital and analog tools. I am Fredo, a visual artist based in Brooklyn, NY. My focus is in digital video manipulation and music visualizer pairings made with TouchDesigner software.</p>
             </div>
-            <div class="dashed-line"></div>
-            <div id="nav-menu">
-                <h2 class="subheadings font-color">Nav</h2>
-                <div class="full-menu">
-                    <ul class="content-menu">
-                        <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                            <li class="link"><a class="link active font-color" href="/video-work.html">Video work</a></li>
-                        </div>
-                        <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                            <li class="link font-color"><a class="link font-color" href="mixes.html">Space traveler mixes</a></li>
-                        </div>
-                        <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                            <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
-                        </div>
-                    </ul>
-                    <ul class="social-menu">
-                        <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                            <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
-                        </div>
-                        <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
-                            <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
-                        </div>
-                    </ul>
+                <div class="dashed-line"></div>
+                <div id="nav-menu">
+                    <h2 class="subheadings font-color">Nav</h2>
+                    <div class="full-menu">
+                        <ul class="content-menu">
+                            <div class="nav-link">
+                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
+                                <li class="link"><a class="link active font-color" href="/video-work.html">Video work</a></li>
+                            </div>
+                            <!-- <div class="nav-link">
+                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
+                                <li class="link font-color"><a class="link font-color" href="mixes.html">Space traveler mixes</a></li>
+                            </div> -->
+                            <div class="nav-link">
+                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
+                                <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
+                            </div>
+                        </ul>
+                        <ul class="social-menu">
+                            <div class="nav-link">
+                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
+                                <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
+                            </div>
+                            <div class="nav-link">
+                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
+                                <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
+                            </div>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
     </div>
     <div id="content-top">
         <div class="sticky-top">
@@ -80,13 +81,14 @@
             <div id="visualizers">
                 <div class="projects">
                     <div class="video-img">
-                        <iframe class="proj-img" src="https://www.youtube.com/embed/wNJihWmU-iE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <img class="proj-img" src="./assets/images/pyramid-thieves.jpeg" alt="">
                     </div>
                     <div class="title-container">
                         <h4 class="proj-title">Thunder – Music Video</h4>
                         <p class="sub-desc font-color">4 min. 2O23</p>
                         <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. I undertook the roles of Editor, Visual Effects artist, and Director for the project.
                         </p>
+                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/wNJihWmU-iE" target=”_blank”>Watch on YOUTUBE</a></p>
                     </div>
                 </div>
             </div>
