--- a/video-work.html
+++ b/video-work.html
@@ -22,40 +22,41 @@
     <div class="bar"></div>
     <div class="bar"></div>
   </div>
-   <div id="nav-section">
-        <a class="name font-color" href="index.html">Wilfredo Herrera
-        </a>
-        <div class="dashed-line"></div>
-        <div class="mobile-friendly">
-            <div id="about-me">
-                <h2 class="subheadings font-color">Information</h2>
-                <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
-            </div>
+  <div id="nav-section">
+    <div class="logo-section">
+        <a class="name font-color" href="index.html">Wilfredo Herrera</a>
+        <a href="https://www.mixcloud.com/fr_radio/" target=”_blank”><img class="radio-icon" src="/assets/images/icons/radio-icon.png" alt=""></a>
+    </div>
+    <div class="dashed-line"></div>
+    <div class="mobile-friendly">
+        <div id="about-me">
+            <p class="about font-color">Hola! Welcome to my archive of artistic expressions created using digital and analog tools. I am Fredo, a visual artist based in Brooklyn, NY. My focus is in digital video manipulation and music visualizer pairings made with TouchDesigner software.</p>
+        </div>
             <div class="dashed-line"></div>
             <div id="nav-menu">
                 <h2 class="subheadings font-color">Nav</h2>
                 <div class="full-menu">
                     <ul class="content-menu">
                         <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link"><a class="link active font-color" href="/video-work.html">Video work</a></li>
                         </div>
-                        <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                        <!-- <div class="nav-link">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link font-color" href="mixes.html">Space traveler mixes</a></li>
-                        </div>
+                        </div> -->
                         <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
                         </div>
                     </ul>
                     <ul class="social-menu">
                         <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
                         </div>
                         <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
                         </div>
                     </ul>
@@ -80,9 +81,7 @@
             <div id="visualizers">
                 <div class="projects">
                     <div class="video-img">
-                        <video class="proj-img" poster="./assets/images/space-men.jpeg">
-                            <!-- <source src="" type="video/mp4"> -->
-                        </video>
+                        <img class="proj-img" src="./assets/images/space-men.jpeg" alt="">
                     </div>
                     <div class="title-container">
                         <h4 class="proj-title">Space-Men Visualizer</h4>
@@ -91,14 +90,20 @@
                             An astronaut tries to save his crewmembers from a failing ship in this remix of Space-Men (Assignment: Outer Space) from 1960, directed by Antonio Margheriti.
                             <br>
                             <br>
-                            <span>TRACK: The Delfonics Theme (How Could You) by The Delfonics</span>
+                            Created using TouchDesigner.
                         </p>
+                        <div class="featured-track">
+                            <img class="music-icon" src="/assets/images/icons/music.png" alt="">
+                            <p class="font-color track-p">
+                                 The Delfonics Theme (How Could You) by The Delfonics
+                            </p>
+                        </div>
                         <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
                     </div>
                 </div>
                 <div class="projects">
                     <div class="video-img">
-                        <iframe class="proj-img" src="https://www.youtube.com/embed/ErilhrNfDMo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <img class="proj-img" src="./assets/images/santo.jpeg" alt="">
                     </div>
                     <div class="title-container">
                         <h4 class="proj-title">El Santo Visualizer</h4>
@@ -111,14 +116,19 @@
                             <br>
                         This project was created using equipment and knowledge provided by Phase Space NYC.
                             <br>
-                            <br>
-                        <span>TRACK: Party Machine by Bruce Haack</span>
+                        <div class="featured-track">
+                            <img class="music-icon" src="/assets/images/icons/music.png" alt="">
+                            <p class="font-color track-p">
+                                Party Machine by Bruce Haack
+                            </p>
+                        </div>
+                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/ErilhrNfDMo" target=”_blank”>Watch on YOUTUBE</a></p>
                     </p>
                     </div>
                 </div>
                 <div class="projects">
                     <div class="video-img">
-                        <iframe class="proj-img" src="https://www.youtube.com/embed/2FxIPGvL-Io" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <img class="proj-img" src="./assets/images/wavy.jpeg" alt="">
                     </div>
                     <div class="title-container">
                         <h4 class="proj-title">Wavy Silent Hour</h4>
@@ -130,11 +140,12 @@
                         <br>
                         <br>    
                         Created using TouchDesigner.</p>
+                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
                     </div>
                 </div>
                 <div class="projects">
                     <div class="video-img">
-                        <iframe class="proj-img" src="https://www.youtube.com/embed/lq0bo3wxtUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <img class="proj-img" src="./assets/images/frosty.png" alt="">
                     </div>
                     <div class="title-container">
                         <h4 class="proj-title">Frosty Silent Hour</h4>
@@ -146,6 +157,7 @@
                         <br>
                         <br>    
                         Created using TouchDesigner.</p>
+                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/lq0bo3wxtUY" target=”_blank”>Watch on YOUTUBE</a></p>
                     </div>
                 </div>
             </div>
