--- a/images.html
+++ b/images.html
@@ -21,40 +21,41 @@
     <div class="bar"></div>
     <div class="bar"></div>
   </div>
-   <div id="nav-section">
-        <a class="name font-color" href="index.html">Wilfredo Herrera
-        </a>
-        <div class="dashed-line"></div>
-        <div class="mobile-friendly">
-            <div id="about-me">
-                <h2 class="subheadings font-color">Information</h2>
-                <p class="about font-color">Archive of artistic expressions created using digital and analog tools by me, Fredo. Multitalented artist working in the audiovisual and web development field.</p>
-            </div>
+  <div id="nav-section">
+    <div class="logo-section">
+        <a class="name font-color" href="index.html">Wilfredo Herrera</a>
+        <a href="https://www.mixcloud.com/fr_radio/" target=”_blank”><img class="radio-icon" src="/assets/images/icons/radio-icon.png" alt=""></a>
+    </div>
+    <div class="dashed-line"></div>
+    <div class="mobile-friendly">
+        <div id="about-me">
+            <p class="about font-color">Hola! Welcome to my archive of artistic expressions created using digital and analog tools. I am Fredo, a visual artist based in Brooklyn, NY. My focus is in digital video manipulation and music visualizer pairings made with TouchDesigner software.</p>
+        </div>
             <div class="dashed-line"></div>
             <div id="nav-menu">
                 <h2 class="subheadings font-color">Nav</h2>
                 <div class="full-menu">
                     <ul class="content-menu">
                         <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link"><a class="link font-color" href="/video-work.html">Video work</a></li>
                         </div>
-                        <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                        <!-- <div class="nav-link">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link font-color" href="mixes.html">Space traveler mixes</a></li>
-                        </div>
+                        </div> -->
                         <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link active font-color" href="/images.html">Images</a></li>
                         </div>
                     </ul>
                     <ul class="social-menu">
                         <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
                         </div>
                         <div class="nav-link">
-                            <img class="arrow" src="/assets/images/nav-arrow.svg" alt="">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
                         </div>
                     </ul>
