--- a/video-work.html
+++ b/video-work.html
@@ -136,7 +136,7 @@
                         <p class="font-color proj-desc">Dreamy geometry radiates warm tones as ocean waves texture the spinning squares.
                         <br>
                         <br>
-                        Part of the silent hour series of visualizers, a BYOM (bring your own music) of sorts.
+                        Part of the silent hour series of visualizers, a BYOM (bring your own music) eye candy party.
                         <br>
                         <br>    
                         Created using TouchDesigner.</p>
@@ -153,7 +153,7 @@
                         <p class="font-color proj-desc">Pulsating thrusts of white and blues, noise and blob shapes slowly gravitate upwards, shifting size and place.
                         <br>
                         <br>
-                        Part of the silent hour series of visualizers, a BYOM (bring your own music) of sorts.
+                        Part of the silent hour series of visualizers, a BYOM (bring your own music) eye candy party.
                         <br>
                         <br>    
                         Created using TouchDesigner.</p>
