--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                             <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
                         </div>
+                        <div class="nav-link">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
+                            <li class="link font-color"><a class="link font-color" href="#">Contact</a></li>
+                        </div>
                     </ul>
                     <ul class="social-menu">
                         <div class="nav-link">
