--- a/video-work.html
+++ b/video-work.html
@@ -75,7 +75,7 @@
                     <a href="video-work.html" class="font-color vid-menu-active">Visualizers</a>
                 </div>
                 <div class="vid-menu-two">
-                    <a href="freelance.html" class="font-color vid-menu-inactive">Freelance Projects</a>
+                    <a href="freelance.html" class="font-color vid-menu-inactive">Freelance</a>
                 </div>
             </div>
             <div id="visualizers">
