--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
   </div>
    <div id="nav-section">
         <div class="logo-section">
-            <a class="name font-color" href="index.html">Wilfredo Herrera</a>
+            <a class="name font-color" href="index.html">WWWilfredooo HHHerreraaa</a>
             <a href="https://www.mixcloud.com/fr_radio/" target=”_blank”><img class="radio-icon" src="/assets/images/icons/radio-icon.png" alt=""></a>
         </div>
         <div class="dashed-line"></div>
         <div class="mobile-friendly">
             <div id="about-me">
-                <p class="about font-color">Hola! Welcome to my archive of artistic expressions created using digital and analog tools. I am Fredo, a visual artist based in Brooklyn, NY. My focus is in digital video manipulation and music visualizer pairings made with TouchDesigner software.</p>
+                <p class="about font-color">Welcome to the digital archive of wil-fredo. Inside you’ll find projects created using different mediums to explore image distortion, music/visualizer pairings, and looped movements. These works were created using digital and/or analog tools.
+                    <br>
+                    <br>
+                Wilfredo is a visual artist from the island of Puerto Rico based in Brooklyn, NY. His focus is in digital video manipulation and music visualizer pairings made with TouchDesigner.</p>
             </div>
             <div class="dashed-line"></div>
             <div id="nav-menu">
