--- a/freelance.html
+++ b/freelance.html
@@ -62,6 +62,10 @@
                                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                                 <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
                             </div>
+                            <div class="nav-link">
+                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
+                                <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>TikTok</a></li>
+                            </div>
                         </ul>
                     </div>
                 </div>
