--- a/images.html
+++ b/images.html
@@ -61,16 +61,20 @@
                             <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
                             <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
                         </div>
+                        <div class="nav-link">
+                            <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
+                            <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>TikTok</a></li>
+                        </div>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
    <div id="image-content">
-        <div class="sticky-top">
+        <!-- <div class="sticky-top">
             <h2 class="content-heading font-color">Images</h2>
             <div class="content-dashed-line"></div>
-        </div>
+        </div> -->
         <div id="content">
             <!-- <p class="desc font-color">Disposable camera images are shifted and twisted around as they are scanned, creating warped and elongated shapes.  </p> -->
             <img src="/assets/images/scanned-img/me-1.jpeg" alt="">
