--- a/freelance.html
+++ b/freelance.html
@@ -72,10 +72,10 @@
             </div>
     </div>
     <div id="content-top">
-        <div class="sticky-top">
+        <!-- <div class="sticky-top">
             <h2 class="content-heading font-color">Video Work</h2>
             <div class="content-dashed-line"></div>
-        </div>
+        </div> -->
         <div id="content">
             <div class="mid-menu">
                 <div class="vid-menu-one">
